<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">云笔记</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="verify_code">验证码</string>
    <string name="nickname">昵称（选填）</string>
    <string name="send_code">发送验证码</string>
    <string name="resend_code">重新发送</string>
    <string name="login_tab">登录</string>
    <string name="register_tab">注册</string>
    <string name="no_account">还没有账号？</string>
    <string name="has_account">已有账号？</string>
    <string name="notes">我的笔记</string>
    <string name="new_note">新建笔记</string>
    <string name="title_hint">标题</string>
    <string name="content_hint">开始记录…</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="confirm_delete">确定删除这条笔记吗？</string>
    <string name="logout">退出登录</string>
    <string name="empty_notes">还没有笔记，点击右下角按钮创建第一条</string>
    <string name="loading">加载中…</string>
    <string name="sending">发送中…</string>
    <string name="saving">保存中…</string>
</resources>
